--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - $HOME/.cache/pip
 
 python:
-  - 2.7
+  #   - 2.7
   - 3.4
   - 3.5
 
@@ -21,11 +21,12 @@ before_install:
 install:
   - export GIT_FULL_HASH=`git rev-parse HEAD`
   - conda update conda
-  - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION mongoquery numpy h5py coverage doct six tzlocal
+  - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION mongoquery numpy h5py coverage doct six tzlocal six
   - source activate testenv
-  - pip install https://github.com/NSLS-II/metadatastore/zipball/master
+  - pip install boltons
+  - pip install https://github.com/NSLS-II/filestore/zipball/master
   - pip install codecov
-  - python setup.py install
+  - pip  install -v .
   # Need to clean the python build directory (and other cruft) or pytest is
   # going to find the build directory and get confused why there are two sets
   # of every test file
